# Taiji-ChIP-seq

./: Taiji-ChIP-seq.cabal  stack.yaml
app/: Main.hs
src/Taiji/Pipeline/: ChIPSeq.hs
src/Taiji/Pipeline/ChIPSeq/: Config.hs  Core.hs
src/Taiji/Pipeline/ChIPSeq/Core/: Functions.hs
