name:                Taiji-ChIP-seq
version:             0.1.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2018 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag exe
  Description: Build executable
  Default:     False

library
  ghc-options:         -Wall
  hs-source-dirs:      src

  exposed-modules:     Taiji.Pipeline.ChIPSeq
                       Taiji.Pipeline.ChIPSeq.Core
                       Taiji.Pipeline.ChIPSeq.Core.Functions
                       Taiji.Pipeline.ChIPSeq.Config

  build-depends:       base >= 4.7 && < 5
                     , bio-pipelines
                     , bio-experiments
                     , conduit-extra
                     , containers
                     , data-default
                     , data-ordlist
                     , filepath
                     , lens
                     , mtl
                     , mmorph
                     , SciFlow >=0.6.0
                     , text
                     , temporary
                     , transformers-base
                     , singletons
                     , split
  default-language:    Haskell2010

executable taiji-chip-seq
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -threaded -Wall

  build-depends:       base >=4 && <5
                     , aeson
                     , data-default
                     , bio-pipelines
                     , lens
                     , SciFlow >=0.6.0
                     , Taiji-ChIP-seq

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/Taiji-ChIP-seq
